// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    Pagination
  </ul>
</div>
`;

exports[`should render 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}
"
`;

exports[`should render with info 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby="cf-pagination-1"
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    Pagination
  </ul>
  <span
    id="cf-pagination-1"
  >
    Pagination Info
  </span>
</div>
`;

exports[`should render with info 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}
"
`;
